# remote

./: .gitignore  biome.json
.github/workflows/: tauri.yml
app/: app.json  babel.config.js  bun.lockb  eas.json  package.json
app/android/: settings.gradle
app/android/app/: build.gradle
app/app/: +not-found.tsx  _layout.tsx  index.tsx
app/app/(tabs)/: _layout.tsx  home.tsx  index.tsx  settings.tsx
app/components/: MenuToggle.tsx  PingStatus.tsx  ThemeToggle.tsx
app/components/ui/: accordion.tsx  alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  radio-group.tsx  select.tsx  separator.tsx  skeleton.tsx  switch.tsx  table.tsx  tabs.tsx  text.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx  typography.tsx
app/ios/: Podfile
app/ios/Remote.xcodeproj/: project.pbxproj
app/lib/icons/: index.ts  (+4 more)
remote-tauri/: bun.lockb  package.json
remote-tauri/src/: App.tsx  home.tsx  main.tsx  settings.tsx
remote-tauri/src-tauri/: Cargo.toml  settings.json  tauri.conf.json
remote-tauri/src-tauri/src/: lib.rs  main.rs
remote-tauri/src-tauri/src/api/: mod.rs  mpv.rs
remote-tauri/src-tauri/src/clients/mpv/: mod.rs  pipe.rs
remote-tauri/src-tauri/src/handlers/: example.rs  mod.rs  mpv.rs
remote-tauri/src-tauri/src/settings/: mod.rs
server/: app.json  bun.lockb  package.json  vite.config.ts
server/src/: App.tsx  settings.tsx
server/src-tauri/: Cargo.toml  settings.json  tauri.conf.json
server/src-tauri/capabilities/: autostart.json
server/src-tauri/icons/: icon.icns
server/src-tauri/src/: lib.rs  main.rs
server/src-tauri/src/api/: mod.rs  mpv.rs
server/src-tauri/src/clients/mpv/: mod.rs  pipe.rs
server/src-tauri/src/settings/: mod.rs
(+34 files in other folders)
