[package]
name = "remote-tauri"
version = "0.0.2"
description = "A Home Remote App"
authors = ["ibanks"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
salvo = "0.64.0"
tokio = { version = "1.38.0", features = ["full"] }
tauri-plugin-shell = "2.0.0-beta.9"
parking_lot = "0.12.3"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.5.0"
tauri-plugin-autostart = "2.0.0-beta.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]
